--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "require": {
         "foroco/php-browser-detection": "^2.3",
-        "phpmailer/phpmailer": "^6.5"
+        "phpmailer/phpmailer": "^6.5",
+        "nesbot/carbon": "^1.39"
+    },
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
